--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,11 @@
 
     <string name="hint_user_id">User ID</string>
     <string name="get_custom_token">Get Token</string>
-    <string name="sign_in">Sign In</string>
-    <string name="create_account">Create Account</string>
+    <string name="sign_in">로그인</string>
+    <string name="create_account">계정 생성</string>
     <string name="send_link">Send Link</string>
-    <string name="sign_out">Sign Out</string>
-    <string name="verify_email">Verify Email</string>
+    <string name="sign_out">로그 아웃</string>
+    <string name="verify_email">이메일 인증</string>
     <string name="disconnect">Disconnect</string>
     <string name="loading">Loading…</string>
     <string name="custom_token">Custom Token</string>
@@ -71,7 +71,7 @@
     <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
     <string name="emailpassword_title_text">Email and Password</string>
 
-    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
+    <string name="passwordless_status_fmt">유저 이메일: %1$s (인증 여부: %2$b)</string>
     <string name="passwordless_title_text">Passwordless Sign In</string>
     <string name="status_email_not_sent">Send link to your email to get started.</string>
     <string name="status_email_sent">Link sent, check your email to continue.</string>
