build.gradle 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,8 @@
     <string name="status_email_not_sent">Send link to your email to get started.</string>
     <string name="status_email_sent">Link sent, check your email to continue.</string>
     <string name="status_link_found">Link received, enter email to sign in.</string>
-
+    <string name="default_notification_channel_id">Channel ID</string>
+    <string name="default_notification_channel_name" translatable="true">Test</string>
     <string name="phone_title_text">Phone Number</string>
 
     <string name="twitter_status_fmt">Twitter User: %s</string>
